k8s/gatewayapi/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: eg
  namespace: gateway-system
spec:
  gatewayClassName: eg
  listeners:
    - name: http
      protocol: HTTP
      port: 8080 # Changed from 80 to 8080 to fix host port collision
      allowedRoutes:
        namespaces:
          from: All
