k8s/gatewayapi/jaeger-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jaeger-httproute
  namespace: observability
spec:
  parentRefs:
  - name: eg
    namespace: gateway-system
  hostnames:
  - "jaeger.demo"
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: jaeger-tracing-svc
      port: 16686
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
