k8s/gatewayapi/shop-ui-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: shop-ui-httproute
  namespace: demo
spec:
  parentRefs:
  - name: eg
    namespace: gateway-system
  hostnames:
  - "polyshop.com"
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: shop-ui-ms-svc
      port: 8080
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
